--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <main class="container" role="main">
         <h1>Will you be my Valentine?</h1>
-        <p class="subtitle">I brought snacks, memes, and unlimited hugs.</p>
+        <p class="subtitle">I will bring snacks, quality time, and unlimited hugs.</p>
 
         <div class="buttons" role="group" aria-label="Valentine response">
             <button class="yes-button" onclick="handleYesClick()">Yes</button>
@@ -25,7 +25,7 @@
             <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExbW5lenZyZHI5OXM2eW95b3pmMG40cWVrMDhtNjVuM3A4dGNxa2g2dSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/VM1fcpu2bKs1e2Kdbj/giphy.gif" alt="Cute animated gif">
         </div>
 
-        <p class="footer">Made with extra love 💗</p>
+        <p class="footer">Made with extra love by jc 💗</p>
     </main>
     <script src="assets/script.js"></script>
 </body>
