--- a/assets/yes_page.html
+++ b/assets/yes_page.html
@@ -13,7 +13,7 @@
 
     <main class="container" role="main">
         <h1 class="header_text">Knew you would say yes!</h1>
-        <p class="sub_text">Okayyy cute. Now come here, Valentine. 💞</p>
+        <p class="sub_text">Okayyy byyy. See you in feb 14, My Valentine. 💞</p>
 
         <div class="gif_container">
             <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExMmo3c3l5ODh3ZGN6NHhhaDE2Mjg1ZjkwOXczdDFxbWM3dTBtaW9zaiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/9XY4f3FgFTT4QlaYqa/giphy.gif" alt="Celebration gif">
